# vteam-bot

./: README.md  contest_info_sample.json  pyproject.toml
src/vteam_bot/: __init__.py  bot.py  config.py  run.py
src/vteam_bot/utils/: atcoder_api.py  contest_manager.py  helpers.py
