[project]
name = "vteam-bot"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "ttkkggww", email = "takigawaktai@gmail.com" }
]
dependencies = [
    "python-dotenv>=1.0.1",
    "discord-py>=2.3.2",
    "requests>=2.31.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "ruff>=0.4.4",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/vteam_bot"]

[project.scripts]
start = "vteam_bot:run"
